# gcnvplot

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: publish.yml  tests.yml
conda-recipe/: meta.yaml
example/: README.md
examples/brca1_synthetic/: README.md  background.tsv  brca1_mane_minimal.gtf  brca1_mane_minimal.sqlite  sample_deletion.tsv
src/gatk_germline_cnv_plotter/: __init__.py  cli.py
src/gcnvplot/: __init__.py  background.py  cli.py  cli_handlers.py  core.py  models.py  plotting.py  read_counts.py  rendering.py  transcripts.py  utils.py
tests/: test_cli.py
tools/: set_version.py
